--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  bloc_test: ^9.1.6
   dartz: ^0.10.1
-  mockito: ^5.4.4
-  mocktail: ^1.0.3
+  equatable: ^2.0.5
   flutter_bloc: ^8.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  bloc_test: ^9.1.6
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
